force-app/main/default/objects/refedge__Attribute_Mapping__c/refedge__Attribute_Mapping__c.object-meta.xml
<CustomObject>
    <description>Attribute Mapping(Bound 5)</description>
    <label>Attribute Mapping</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Attribute Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>