force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Auto_add__c.field-meta.xml
<CustomField>
    <fullName>refedge__Auto_add__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a new value is added to a picklist field, that value will be automatically added as an attribute value.</inlineHelpText>
    <label>Auto-Add</label>
    <type>Checkbox</type>
</CustomField>