force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Auto_populate__c.field-meta.xml
<CustomField>
    <fullName>refedge__Auto_populate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically populates a record&apos;s attributes with mapped picklst values at the time the Reference Program Member checkbox is selected.</inlineHelpText>
    <label>Auto-Populate</label>
    <type>Checkbox</type>
</CustomField>