force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Auto_update__c.field-meta.xml
<CustomField>
    <fullName>refedge__Auto_update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When changes to labels are made to a picklist field, those changes will be automatically made to the mapped attribute.</inlineHelpText>
    <label>Auto-Update</label>
    <type>Checkbox</type>
</CustomField>