force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Inheritable__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inheritable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this picklist is mapped to an Account attribute then all related Contact and Reference Content records will inherit this attribute.</inlineHelpText>
    <label>Inheritable</label>
    <type>Checkbox</type>
</CustomField>