force-app/main/default/objects/refedge__Attribute_Mapping__c/fields/refedge__Is_Related_Mapping__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Related_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related Mapping</label>
    <type>Checkbox</type>
</CustomField>